BE-fix : 장기기억 seed runner 포맷 오류 수정